Bug 72903 - [SNB/IVB/HSW/BYT/BDW Regression]igt/gem_ctx_exec/basic fails
Summary: [SNB/IVB/HSW/BYT/BDW Regression]igt/gem_ctx_exec/basic fails
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high major
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-20 08:46 UTC by lu hua
Modified: 2017-10-06 14:40 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description lu hua 2013-12-20 08:46:35 UTC
System Environment:
--------------------------
Platform: Sandybridge/Ivybridge/Haswell
Kernel:  (drm-intel-nightly)074fdf374fa296c16a7449b9d2d4ad6ff73c0c8d

Bug detailed description:
-------------------------
It fails on Sandybridge/Ivybridge/Haswell with ppgtt and nightly branch. It works well on -fixes and -queued kernel.

The latest good commit: 02905525c3310ba673676f8041d0ff6be4da0e24 
The latest bad commit: a7c1d426ef335ccfb6bd567a3f616fa232418fa2 

output:
IGT-Version: 1.5-g2a71bff (x86_64) (Linux: 3.13.0-rc4_drm-intel-nightly_074fdf_20131219+ x86_64)
Test assertion failure function __real_main169, file gem_ctx_exec.c:192:
Last errno: 2, No such file or directory
Failed assertion: exec(fd, handle, I915_EXEC_RENDER, ctx_id) < 0
Subtest basic: FAIL

Reproduce steps:
----------------------------
1. ./gem_ctx_exec --run-subtest basic
Comment 1 Ben Widawsky 2013-12-22 20:02:43 UTC
Can you please bisect?
Comment 2 Ben Widawsky 2013-12-22 20:55:47 UTC
Please test:
https://patchwork.kernel.org/patch/3394461/
Comment 3 lu hua 2013-12-23 06:31:53 UTC
(In reply to comment #2)
> Please test:
> https://patchwork.kernel.org/patch/3394461/

Fixed by this patch.
Comment 4 lu hua 2013-12-26 06:25:27 UTC
It also fails on BYT and BDW.
Comment 5 Daniel Vetter 2014-01-10 08:36:44 UTC
Should be fixed now with latest topic/ppgtt. Please confirm.
Comment 6 lu hua 2014-01-13 03:14:29 UTC
Verified.Fixed.
Comment 7 Elizabeth 2017-10-06 14:40:54 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.